argocd/jellyfin/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
