argocd/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`jellyfin.mia.cx`) || Host(`jellyfin.yggdrasil.mia.cx`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls: {}
